--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -33,7 +33,7 @@ $link-lighten-amount: 20%;
 $base-background-color: #fff;
 $base-section-background-color: $link-color;
 $primary-color: #4285f4;
-$primary-color-hover: #3266d5;
+$primary-color-hover: #ffffff;
 $icon-fill-color: #8b8b8b;
 
 // Sizes
